<resources>
    <string name="app_name">NUCS5520Sp_MusicLyicsApp</string>
    <string name="string_button_at_your_service">at your service</string>
    <string name="string_team_name">TEAM 30</string>
    <string name="string_amount_to_be_converted_e_g_123_45">Amount (e.g., 123.45)</string>
    <string name="string_currency_to">To:</string>
    <string name="string_currency_from">From:</string>
    <string name="string_button_convert">Convert</string>
    <string name="string_result_null">-</string>
    <string name="string_spinner_from_currency">Select the currency you want to convert from</string>
    <string name="string_spinner_to_currency">Select the currency you want to convert to</string>
    <string name="string_button_history">History</string>
    <string name="string_history_from">From</string>
    <string name="string_history_to">To</string>
    <string name="string_equal_currency_icon">Arrows indicating two currencies are equal in value</string>
    <string name="string_from_amount_row">amount</string>
    <string name="string_to_amount_row">amount</string>
    <string name="string_to_currency_row">currency</string>
    <string name="string_stick_it_to_em">Stick It To \'Em</string>
    <string name="string_log_in">Log In</string>
    <string name="string_username">Username (default is email)</string>
    <string name="string_sign_up"><u>Sign Up</u></string>
    <string name="string_new_to_this_app">New to this app?</string>
    <string name="string_email">Email</string>
    <string name="string_sign_up_button">Sign Up</string>
    <string name="string_already_a_user">Already a user?</string>
    <string name="string_log_in_button"><u>Log In</u></string>
    <string name="string_logout">Logout</string>
    <string-array name="currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>JPY</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>SEK</item>
        <item>MXN</item>
        <item>NZD</item>
        <item>SGD</item>
        <item>HKD</item>
        <item>NOK</item>
        <item>KRW</item>
        <item>TRY</item>
        <item>INR</item>
        <item>RUB</item>
        <item>BRL</item>
        <item>ZAR</item>
        <item>DKK</item>
        <item>PLN</item>
        <item>TWD</item>
        <item>THB</item>
        <item>MYR</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_username_row">username</string>
    <string name="string_email_row">email</string>
    <string name="string_send_sticker">send sticker</string>
    <string name="string_send">send</string>
    <string name="string_women_s_head">Women\'s head</string>
    <string name="string_sticker_history">Sticker History</string>
    <string name="stickers">Stickers</string>
    <string name="string_count">Count</string>
    <string name="string_stickers">Stickers</string>
    <string name="string_0">0</string>
</resources>