<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_from_amount_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/string_from_amount_row"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView_from_currency_row"
        app:layout_constraintEnd_toStartOf="@+id/textView_from_currency_row"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_from_currency_row" />

    <TextView
        android:id="@+id/textView_from_currency_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/string_to_currency_row"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_from_amount_row"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView_to_amount_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/string_to_amount_row"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/textView_to_currency_row"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView_to_currency_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/string_to_currency_row"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView_to_amount_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_to_amount_row"
        app:layout_constraintTop_toTopOf="@+id/textView_to_amount_row" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/textView_to_amount_row"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_from_currency_row"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_currency_equal"
        android:contentDescription="@string/string_from_amount_row" />
</androidx.constraintlayout.widget.ConstraintLayout>